# cad

./: .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
designs/: __init__.py  magsafe_desk_holder.py  mounting_plate.py  spacer.py  tab_a9_golf_case.py  tab_a9_golf_case_text.py
examples/: basic_mounting_plate.scad
projects/tab-a9-golf-case/: README.md  project.toml
projects/tab-a9-golf-case/artifacts/case/: case.step  case.stl  cost_estimate.json  cost_estimate.txt
projects/tab-a9-golf-case/artifacts/case-no-text/: case-no-text.step  case-no-text.stl  cost_estimate.json  cost_estimate.txt
projects/tab-a9-golf-case/artifacts/text-inlay/: cost_estimate.json  cost_estimate.txt  text-inlay.step  text-inlay.stl
projects/tab-a9-golf-case/designs/: tab_a9_golf_case.py  tab_a9_golf_case_text.py
projects/tab-a9-golf-case/outputs/case/: case.step  case.stl  cost_estimate.json  cost_estimate.txt
projects/tab-a9-golf-case/outputs/case-no-text/: case-no-text.step  case-no-text.stl  cost_estimate.json  cost_estimate.txt
projects/tab-a9-golf-case/outputs/text-inlay/: text-inlay.step
projects/xbox-elite-index-card-holder/: README.md  project.toml
projects/xbox-elite-index-card-holder/designs/: xbox_elite_index_card_holder.py
projects/xbox-elite-index-card-holder/outputs/card-holder/: card-holder.step  card-holder.stl  cost_estimate.json  (+1 more)
src/cad_workspace/: __init__.py  cli.py  cost.py  exporter.py  imports.py  model.py  projects.py  registry.py  render.py
templates/: imported_step_design.py  new_design.py
tests/: test_workspace.py
(+8 files in other folders)
